image hover overflow fix

--- a/me/newout.css
+++ b/me/newout.css
@@ -98,29 +98,7 @@
     transition-duration: 0.3s;
 }
 
-.cardpl img:before {
-    content: "";
-    position: absolute;
-    z-index: 999;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgb(88, 177, 224);
-    -webkit-transform: scaleY(0);
-    transform: scaleY(0);
-    -webkit-transform-origin: 50% 100%;
-    transform-origin: 50% 100%;
-    -webkit-transition-property: transform;
-    transition-property: transform;
-    -webkit-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-    -webkit-transition-timing-function: ease-out;
-    transition-timing-function: ease-out;
-    width: 10px;
-    margin-left: 97%;
-    cursor: pointer;
-}
+
 
 .cardpl {
     overflow: hidden;
@@ -256,4 +234,8 @@
     -webkit-transition: all .3s ease;
     -moz-transition: all .3s ease;
     -o-transition: all .3s ease;
+}
+
+.hwrap{
+    overflow: hidden;
 }
